--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -20,6 +20,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0;
 }
@@ -42,6 +46,7 @@ nav{
 
     position: sticky;
     top: 0;
+    left: 0;
     z-index: 10 ;
     background-color: #111111;
 
@@ -57,7 +62,18 @@ nav{
     flex-wrap: nowrap;
 }
 
-.marca>h1{
+.marca>a{
+    text-decoration: none;
+    color: transparent;
+
+}
+
+.marca>a:visited{
+    text-decoration: none;
+    color: transparent;
+}
+
+.marca h1{
     margin: 0;
     font-family: system-ui, sans-serif;
     color: transparent;
@@ -116,6 +132,20 @@ nav{
     display: flex;
 }
 
+
+
+
+.menu-style.si>a{
+    text-decoration: none;
+    color: inherit;
+
+}
+
+.menu-style.si>a:visited{
+    text-decoration: none;
+    color: inherit;
+}
+
 .menu-style{
     font-size: 18px;
     letter-spacing: 0.07em;
@@ -128,6 +158,12 @@ nav{
     background: none;
     position: relative;
 }
+
+.menu-style.link-activo{
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 7px #ffffff;
+}
+
 
 .menu-styleII{
     font-size: 18px;
@@ -285,6 +321,20 @@ nav{
     width: 800px;
 }
 
+.icono{
+    /* width: 100%; */
+    position: sticky;
+    bottom: 150px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+.material-symbols-outlined.style_icon{
+    font-size: 60px;
+    color: white;
+
+}
 
 
 
@@ -298,6 +348,23 @@ nav{
     width: 100%;
     /* min-height: 200vh; */
     background-color: #1a1a1a;
+}
+
+.especialidades{
+    font-size: 36px;
+    display: flex;
+    text-align: center;
+    height: 105px;
+    font-family: sans-serif;
+    color: white;
+    background-color: #111111;
+    align-items: center;
+    justify-content: center;
+}
+
+.material-symbols-outlined.estilo{
+    color: white;
+    font-size: 33px;
 }
 
 .CajaFuera{
@@ -499,6 +566,16 @@ nav{
 #poster:hover{
     box-shadow: 0px 0px 50px rgba(0,0,0,1);
 }
+
+
+
+
+
+
+/* Empieza index2 */
+
+
+
 
 
 
