--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -65,7 +65,7 @@ nav{
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 10 ;
+    z-index: 11;
     background-color: #111111;
 
 }
@@ -149,6 +149,10 @@ nav{
 
 .activo{
     display: flex;
+}
+
+.pop_up_fondo.seva{
+    display: none;
 }
 
 
@@ -291,7 +295,7 @@ nav{
     top: 0;
     left: 0;
     width: 100%;
-    /* height: 100vh; */
+    min-height: 100vh;
     /* margin-top: 130px; */
     background-color: #1a1a1a;
 }
@@ -308,7 +312,7 @@ nav{
 }
 
 .about{
-    height: 100vh;
+    /* height: 100vh; */
     padding: 150px;
     /* padding-top: 0px; */
     gap: 81px;
@@ -361,7 +365,8 @@ nav{
 }
 
 .imagen_home>img{
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
 }
 
 .icono{
@@ -420,6 +425,27 @@ nav{
     overflow: hidden;
 }
 
+.contenidoII{
+    width: 100%;
+    height: 100%;
+    padding: 120px;
+    /* padding-top: 190px; */
+    gap: 65px;
+    /* box-shadow: inset -15px -15px 20px 0px rgb(0 0 0 / 56%); */
+    background-color: transparent;
+
+    position: relative;
+    top: 50px;
+    left: 0;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
 .contenido{
     width: 100%;
     /* height: 100%; */
@@ -441,9 +467,10 @@ nav{
     align-items: center;
 }
 
+
 .container-card{
     width: 12%;
-    padding: 27px;
+    /* padding: 27px; */
     display: flex;
 
     justify-content: center;
@@ -518,6 +545,20 @@ nav{
 
 }
 
+.estilo_carta{
+    text-decoration: none;
+    color: white;
+    font-family: "Circular";
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.estilo_carta:visited{
+    color: white;
+    font-family: "Circular";
+}
+
 .imagen{
     /* padding: 15px; */
     text-align: center;
@@ -565,11 +606,14 @@ nav{
 
 #myVideo {
     width: 100%;
+    /* max-width: 1400px; */
+    /* margin: auto; */
     height: 100%;
     filter: blur(2.5px);
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     object-fit: cover;
 }
       
@@ -617,6 +661,29 @@ nav{
 
 /* Empieza index2 */
 
+#navII{
+    width: 100%;
+    height: 105px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    font-family: "Oswald";
+    font-weight: 400;
+    
+    gap: 60px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 11;
+    background-color: #111111;
+
+}
+
 .fondo_caja{
     width: 100%;
     height: 100vh;
@@ -627,6 +694,23 @@ nav{
     width: 100%;
     height: 100vh;
 }
+
+#myVideoII {
+    width: 100%;
+    margin: auto;
+    padding: 30px;
+    height: 100%;
+    /* filter: blur(2.5px); */
+    border-radius: 10px;
+    box-shadow: 0px 0px 13px 0px rgb(255 255 255 / 56%);
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    object-fit: cover;
+    transition: 1s;
+}
+
 
 .dialogo{
     width: 100%;
@@ -643,10 +727,21 @@ nav{
 
 .cajonera{
     width: 100%;
+    max-width: 1400px;
+    height: 500px;
+    margin: auto;
     position: relative;
     top: 0;
     left: 0;
-    overflow: hidden;
+    
+    /* overflow: hidden; */
+}
+
+
+.cajonera:hover{
+    /* box-shadow: 0px 0px 13px 14px rgb(255 255 255 / 56%);
+    position: absolute;
+    top: 50px; */
 }
 
 #cajonera2{
@@ -657,6 +752,9 @@ nav{
 
 .backG_psd{
     width: 100%;
+    max-width: 1400px;
+    margin: auto;
+    /* padding: 350px; */
     display: flex;
 
     flex-direction: row;
@@ -665,7 +763,7 @@ nav{
 
 .box{
     width: 33.33%;
-    padding: 10px;
+    padding: 15px;
 
 }
 
@@ -683,10 +781,57 @@ nav{
     position: sticky;
     bottom: 150px;
     padding: 15px;
-    margin-top: 30px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
 }
+
+.pop_up_fondo{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    position: fixed;
+    z-index: 8;
+    top: 0;
+}
+
+.cerrar_popUp{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9;
+
+}
+
+
+.pop_up{
+    width: 80%;
+    margin: auto;
+    height: 80vh;
+    z-index: 10;
+    background-color: #292929;
+    gap: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+}
+
+.info{
+    width: 50%;
+    font-family: sans-serif;
+    padding: 20px;
+    color: white;
+}
+
+.pop_up>img{
+    width: 50%;
+    object-fit: cover;
+}
+
+
 
 
 
