--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -345,7 +345,7 @@ nav{
     color: white;
     font-family: sans-serif;
     text-align: start;
-    font-size: 52px;
+    font-size: 46px;
 }
 
 .texto{
@@ -867,7 +867,19 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+}
+
+.p1{
+    font-size: 21px;
+    font-weight: 500;
+    color: white;
+    font-family: sans-serif;
+}
+
+.p2{
+    font-size: 16px;
+    color: white;
+    font-family: sans-serif;
 }
 
 .pop_up>img{
@@ -1049,6 +1061,7 @@ nav{
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 100%;
     }
 
     .columnaUno {
@@ -1207,6 +1220,7 @@ nav{
     .about{
         padding: 40px;
         text-align: center;
+        height: 100%;
     }
 }
 
@@ -1277,6 +1291,14 @@ nav{
         background-clip: text;
         -webkit-background-clip: text;
     }
+}
+
+@media (max-width: 375px){
+
+    .pop_up {
+        width: 100%;
+    }
+
 }
 
 
